Edición de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     </title>
   </head>
   <body>
-    <nav id="navegacion"></nav>
+    <nav id="navegacion">
+      <ul id="listanav">
+          <li id="elpais">EL PAIS</li>
+          <li id="think"> #THINKBIGEMPRESAS</li>
+          <li> <img id="telefonica" src="img/telefonica-logo.webp" alt="logo telefonica"></li>
+      </ul>
+    </nav>
     <header>
-      <img
+      <img 
         id="imagenheader"
         src="img/pecera.jpg"
         alt="Imagen en la que aparece
@@ -28,7 +34,7 @@
         accedan a nuestros dispositivos conectados para robar información
       </h2>
       <p>
-        Para algunos, el mayor de los tesoros puede estar sumergido en una
+        <span class="capitular">P</span>ara algunos, el mayor de los tesoros puede estar sumergido en una
         pecera. Si no, que le pregunten al casino que comprometió los datos de
         miles de clientes al instalar un termómetro inteligente en uno de sus
         acuarios. Además de regular la temperatura del agua, este dispositivo se
@@ -315,12 +321,14 @@
         de que alguien ajeno está preparando un ataque a todo lo que tenemos
         conectado entre sí, según López.
       </p>
-      <div class="thinkbig">
+      <footer>
+        <div class="thinkbig">
         <img
           src="img/banner-thinkbig.png"
           alt="Más historias en ThinkBigEmpresas, compañía de Telefónica"
         />
       </div>
+      </footer>
     </main>
   </body>
 </html>
