Arreglo textos y añadido del final de la pagina

--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
       <ul id="listanav">
           <li id="elpais">EL PAIS</li>
           <li id="think"> #THINKBIGEMPRESAS</li>
-          <li> <img id="telefonica" src="img/telefonica-logo.webp" alt="logo telefonica"></li>
+          <li id="unproyecto"> UN PROYECTO DE <img id="telefonica" src="img/telefonica-logo.webp" alt="logo telefonica"></li>
       </ul>
     </nav>
-    <header>
-      <img 
-        id="imagenheader"
+    <main class="informacion">
+      <header>
+      <img class="ilustraciones"
         src="img/pecera.jpg"
         alt="Imagen en la que aparece
       una pecera, una mesa de juegos de azar y dos personas mirando la estampa
       en estilo ilustrativo flatplan"
       />
     </header>
-    <main class="informacion">
       <h1>
         Cinco sitios por donde pueden colarse los ‘hackers’ y cómo solucionarlo
       </h1>
@@ -33,6 +32,19 @@
         Estos son los remedios para cazar a los ciberdelincuentes antes de que
         accedan a nuestros dispositivos conectados para robar información
       </h2>
+      <div id="iconos">
+          <ul>
+            <li class="iconos"> <img src="img/facebook.jpg" alt="logo Facebook"></li>
+            <li class="iconos"> <img src="img/twitter.png" alt="logo twitter"></li>
+            <li class="iconos"> <img src="img/share.png" alt="icono compartir"></li>
+           </ul>
+      </div>
+      <h3>
+        J.G/ J.P/ ANA CUNA (ILUSTRACIONES)
+      </h3>
+      <h4>
+        1OCT 2019-09:41 CEST
+      </h4>
       <p>
         <span class="capitular">P</span>ara algunos, el mayor de los tesoros puede estar sumergido en una
         pecera. Si no, que le pregunten al casino que comprometió los datos de
@@ -69,8 +81,7 @@
         especialmente en estos cinco escenarios.
       </p>
       <div class="imagenes">
-        <img
-          src="img/wearables.jpg"
+        <img class="ilustraciones"src="img/wearables.jpg"
           alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
         />
       </div>
@@ -114,8 +125,7 @@
         </li>
       </ul>
       <div class="imagenes">
-        <img
-          src="img/hogarconectado.jpg"
+        <img class="ilustraciones" src="img/hogarconectado.jpg"
           alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
         />
       </div>
@@ -160,7 +170,7 @@
         </li>
       </ul>
       <div class="imagenes">
-        <img
+        <img class="ilustraciones"
           src="img/cocheautonomos.jpg"
           alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
         />
@@ -208,7 +218,7 @@
         </li>
       </ul>
       <div class="imagenes">
-        <img
+        <img class="ilustraciones"
           src="img/industria4.jpg"
           alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
         />
@@ -257,7 +267,7 @@
         </li>
       </ul>
       <div class="imagenes">
-        <img
+        <img class="ilustraciones"
           src="img/ciudadinteligente.jpg"
           alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
         />
@@ -321,14 +331,22 @@
         de que alguien ajeno está preparando un ataque a todo lo que tenemos
         conectado entre sí, según López.
       </p>
-      <footer>
-        <div class="thinkbig">
-        <img
+        <div>
+        <img class="mashistorias"
           src="img/banner-thinkbig.png"
           alt="Más historias en ThinkBigEmpresas, compañía de Telefónica"
         />
+        <div>
+          <h3>Se adhiere a los criterios de <img class="thetrust" src="img/the-trust-project.png" alt="the trust project"></h3>
+        </div>
       </div>
-      </footer>
+      <div id="iconos">
+          <ul>
+            <li class="iconos"> <img src="img/facebook.jpg" alt="logo Facebook"></li>
+            <li class="iconos"> <img src="img/twitter.png" alt="logo twitter"></li>
+            <li class="iconos"> <img src="img/share.png" alt="icono compartir"></li>
+           </ul>
+      </div>
     </main>
   </body>
 </html>
