Arreglo listas, añado destacados

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
       <p>
         <span class="capitular">P</span>ara algunos, el mayor de los tesoros puede estar sumergido en una
         pecera. Si no, que le pregunten al casino que comprometió los datos de
-        miles de clientes al instalar un termómetro inteligente en uno de sus
+        miles de clientes al instalar un <span class="destacado">termómetro inteligente inteligente</span> en uno de sus
         acuarios. Además de regular la temperatura del agua, este dispositivo se
-        convirtió en la puerta de entrada de una banda de hackers. Aprovechando
+        convirtió en la puerta de entrada de una banda de <span class="destacado">hackers.</span> Aprovechando
         la conexión a internet del termómetro, los ciberdelincuentes se colaron
         en la red informática del casino y comenzaron a extraer información
         confidencial de los jugadores. Aunque el ataque se frenó a tiempo, puso
         de relevancia la vulnerabilidad de los objetos que “hablan” entre sí
         gracias a la tecnología IoT (siglas en inglés de internet de las cosas),
-        cada vez más presente en nuestras vidas. En el caso de las empresas, los
+        <span class="destacado">cada vez más presente en nuestras vidas.</span> En el caso de las empresas, los
         objetos con sensores ya se emplean para optimizar flotas de vehículos,
         mejorar la eficiencia energética de los edificios, automatizar procesos
         industriales, controlar la afluencia en tiendas… “El auténtico ‘boom’
         del IoT está en los procesos de negocio, donde encontramos dispositivos
         conectados permanentemente, lo que obliga a controlar su seguridad en
         todo momento para solventar cualquier vulnerabilidad y anticiparse a un
-        posible ataque”, comenta Agustín Cárdenas, director de Transformación de
-        Negocio de Telefónica Empresas. Según este experto, su compañía
+        posible ataque”, comenta <span class="bold">Agustín Cárdenas, director de Transformación de
+        Negocio de Telefónica Empresas.</span> Según este experto, su compañía
         monitoriza más de 14 millones de sensores conectados a través de redes
         móviles, para garantizar la continuidad de los negocios que usan estos
         dispositivos. "Detectamos de forma proactiva alarmas del funcionamiento
@@ -88,22 +88,22 @@
       <p>
         Una investigación de la IT University de Copenhague demostró que a
         través de los sensores de movimiento de un reloj inteligente se pueden
-        descifrar las contraseñas que está introduciendo en un teclado el
+        <span class="destacado">descifrar las contraseñas</span> que está introduciendo en un teclado el
         usuario que lleva puesto ese accesorio.
       </p>
       <p id="amenazasoluciones">Amenazas</p>
       <ul>
         <li>
-          'Hackeo'. Los ciberdelincuentes pueden acceder a nuestros wearables
+          - 'Hackeo'. Los ciberdelincuentes pueden acceder a nuestros wearables
           (ropa y accesorios inteligentes) y robar la información que guardamos
           en ellos.
         </li>
         <li>
-          'Malware'. Instalación desde una descarga de internet de un programa
+           - 'Malware'. Instalación desde una descarga de internet de un programa
           malicioso que piratea los dispositivos.
         </li>
         <li>
-          'Phishing'. A través de apps o correos electrónicos aparentemente
+          -  'Phishing'. A través de apps o correos electrónicos aparentemente
           oficiales, se nos solicitan datos personales con los que comercian
           posteriormente.
         </li>
@@ -111,15 +111,15 @@
       <p id="amenazasoluciones">Soluciones</p>
       <ul>
         <li>
-          Actualización. Mantener nuestros dispositivos siempre actualizados,
+          -  Actualización. Mantener nuestros dispositivos siempre actualizados,
           con las últimas versiones de software disponible.
         </li>
         <li>
-          Copias de seguridad. Permite disponer de todos nuestros datos desde la
+          -  Copias de seguridad. Permite disponer de todos nuestros datos desde la
           última vez que los guardamos.
         </li>
         <li>
-          MSSP. Si los desarrolladores del dispositivo no pueden hacerse cargo
+          -  MSSP. Si los desarrolladores del dispositivo no pueden hacerse cargo
           de su seguridad, lo ideal es que contraten los servicios de un MSSP,
           siglas en inglés de proveedor de seguridad gestionada
         </li>
@@ -133,22 +133,22 @@
         Hace dos años, una mujer holandesa denunció que la habían espiado a
         través de una cámara que instaló en su domicilio para controlar a su
         cachorro con el móvil. Se dio cuenta del hackeo cuando dejó el teléfono
-        en la mesa y la cámara se movía sin que ella diera ninguna orden a
+        en la mesa y <span class="destacado"> cámara se movía</span> sin que ella diera ninguna orden a
         través de la app.
       </p>
       <p id="amenazasoluciones">Amenazas</p>
       <ul>
         <li>
-          'Hackeo'. Los ciberdelincuentes acceden a los sistemas inteligentes de
+          -'Hackeo'. Los ciberdelincuentes acceden a los sistemas inteligentes de
           nuestras casas para controlarlos en remoto.
         </li>
         <li>
-          Corte eléctrico. La caída del sistema eléctrico pone en jaque a
+          -  Corte eléctrico. La caída del sistema eléctrico pone en jaque a
           cualquier sistema conectado a la red. Sería conveniente contar con
           algún mecanismo de electricidad de emergencia.
         </li>
         <li>
-          'Ransomware'. Programa dañino que restringe el acceso a partes del
+          -  'Ransomware'. Programa dañino que restringe el acceso a partes del
           sistema operativo que controla la casa conectada. Para recuperar el
           control, se exige un rescate al usuario.
         </li>
@@ -156,16 +156,16 @@
       <p id="amenazasoluciones">Soluciones</p>
       <ul>
         <li>
-          Algoritmos. Mediante la programación del sistema inteligente, podemos
+          -  Algoritmos. Mediante la programación del sistema inteligente, podemos
           detectar si los sensores de nuestra casa se comportan erróneamente y
           verificar si un ciberdelincuente quiere acceder al hogar.
         </li>
         <li>
-          Contraseñas. Fijar contraseñas complejas y cambiar las que vienen de
+          -  Contraseñas. Fijar contraseñas complejas y cambiar las que vienen de
           serie.
         </li>
         <li>
-          Antivirus. Instalar un antivirus que detecte, pare y elimine cualquier
+          -  Antivirus. Instalar un antivirus que detecte, pare y elimine cualquier
           ataque en la red a través de programas maliciosos.
         </li>
       </ul>
@@ -177,23 +177,23 @@
       </div>
       <p>
         Uno de los casos de hackeos más sonados fue el de dos estadounidenses
-        expertos en seguridad que accedieron desde sus ordenadores a un Jeep
-        Cherokee. Consiguieron manipular el aire acondicionado, la radio, el
+        expertos en seguridad que accedieron desde sus ordenadores a un <span class="destacado">Jeep Cherokee</span>
+        . Consiguieron manipular el aire acondicionado, la radio, el
         limpiaparabrisas y hasta detener el motor del vehículo.
       </p>
       <p id="amenazasoluciones">Amenazas</p>
       <ul>
         <li>
-          'Hackeo'. Alguien puede acceder a los sistemas inteligentes de
+          -  'Hackeo'. Alguien puede acceder a los sistemas inteligentes de
           nuestros vehículos autónomos y controlarlos sin que podamos hacer
           nada.
         </li>
         <li>
-          Desconexión. Una caída del sistema satelital dejaría al coche autónomo
+         -   Desconexión. Una caída del sistema satelital dejaría al coche autónomo
           sin capacidad de guía a través de una navegación por GPS.
         </li>
         <li>
-          Intromisión en comunicaciones. Un cibercriminal puede interceptar las
+          -  Intromisión en comunicaciones. Un cibercriminal puede interceptar las
           comunicaciones entre el coche y otros dispositivos y trastocar el
           normal funcionamiento del vehículo.
         </li>
@@ -201,18 +201,18 @@
       <p id="amenazasoluciones">Soluciones</p>
       <ul>
         <li>
-          La nube. Migrar, en la medida de lo posible, todo el software del
+          -  La nube. Migrar, en la medida de lo posible, todo el software del
           coche y los sistemas operativos a la nube para recuperar los datos
           ante posibles ataques externos.
         </li>
         <li>
-          Cifrado de datos. Empleamos un algoritmo para transformar un mensaje,
+          -  Cifrado de datos. Empleamos un algoritmo para transformar un mensaje,
           sin atender a su estructura lingüística o significado, de tal forma
           que sea incomprensible para quien no disponga de la clave secreta del
           algoritmo.
         </li>
         <li>
-          Identificación del dispositivo. Si el vehículo cuenta con su propio
+          -  Identificación del dispositivo. Si el vehículo cuenta con su propio
           identificador, igualmente que los sensores que incorpore, será posible
           aislarlos en caso de sufrir cualquier ataque.
         </li>
@@ -234,16 +234,16 @@
       <p id="amenazasoluciones">Amenazas</p>
       <ul>
         <li>
-          Ataque 'botnets'. Se trata de una red de bots, controlada por un
+          -  Ataque 'botnets'. Se trata de una red de bots, controlada por un
           hacker, que propaga automáticamente malware o todo tipo de software
           pernicioso para los dispositivos.
         </li>
         <li>
-          'Hackeo'. Alguien ajeno a la maquinaria puede colarse en sus sistemas
+          -  'Hackeo'. Alguien ajeno a la maquinaria puede colarse en sus sistemas
           inteligentes y darle órdenes en remoto.
         </li>
         <li>
-          'Ransomware'. Se encripta parte de los archivos de las máquinas y se
+          -  'Ransomware'. Se encripta parte de los archivos de las máquinas y se
           exige un rescate para volver a acceder a ellos. Esto puede alterar los
           ritmos de producción y las rutas de distribución.
         </li>
@@ -251,17 +251,17 @@
       <p id="amenazasoluciones">Soluciones</p>
       <ul>
         <li>
-          Inteligencia artificial. Incorporar inteligencia artificial en la
+          -  Inteligencia artificial. Incorporar inteligencia artificial en la
           maquinaria para que aprenda de las amenazas detectadas y, de esta
           forma, predecir y mejorar sus sistemas de defensa autónomamente.
         </li>
         <li>
-          La nube. Subir a una plataforma cloud el software de las máquinas y
+          -  La nube. Subir a una plataforma cloud el software de las máquinas y
           los sistemas operativos para recuperar la información ante posibles
           ataques.
         </li>
         <li>
-          Cifrado de datos. Empleamos un algoritmo para transformar un mensaje,
+          -  Cifrado de datos. Empleamos un algoritmo para transformar un mensaje,
           sin atender a su estructura lingüística o significado, de tal forma
           que sea incomprensible para quien no disponga de una clave secreta.
         </li>
@@ -282,17 +282,17 @@
       <p id="amenazasoluciones">Amenazas</p>
       <ul>
         <li>
-          'Hackeo'. Los sistemas inteligentes de una ciudad entera pueden ser
+          -  'Hackeo'. Los sistemas inteligentes de una ciudad entera pueden ser
           atacados con diferentes fines.
         </li>
         <li>
-          Caída eléctrica. La caída del sistema eléctrico pone en jaque a
+          -  Caída eléctrica. La caída del sistema eléctrico pone en jaque a
           cualquier sistema conectado a la red, y más en el caso de las
           ciudades. Sería conveniente contar con algún mecanismo de electricidad
           de emergencia.
         </li>
         <li>
-          'Malware'. Los ciberdelincuentes pueden optar por instalar
+          -  'Malware'. Los ciberdelincuentes pueden optar por instalar
           externamente un programa malicioso con el que piratear los
           dispositivos de la ciudad, desde el alumbrado hasta las cámaras de
           tráfico.
@@ -301,18 +301,18 @@
       <p id="amenazasoluciones">Soluciones</p>
       <ul>
         <li>
-          AMI. Infraestructuras de medición avanzada, en sus siglas en inglés.
+         -   AMI. Infraestructuras de medición avanzada, en sus siglas en inglés.
           Redes de comunicaciones y sistemas de gestión que permiten la
           comunicación bidireccional entre las distribuidoras y los clientes
           finales.
         </li>
         <li>
-          Integración de sistemas. En vez de contar con sistemas operativos muy
+          -  Integración de sistemas. En vez de contar con sistemas operativos muy
           diferentes entre los distintos IoT de la ciudad, optar por una
           integración que centralice la gestión.
         </li>
         <li>
-          Cifrado de datos. Se usa un algoritmo para codificar un mensaje, de
+          -  Cifrado de datos. Se usa un algoritmo para codificar un mensaje, de
           tal forma que sea incomprensible para quien no disponga de una clave
           secreta.
         </li>
@@ -324,8 +324,8 @@
         señuelo para detectar ataques. "Expones directa y abiertamente
         dispositivos con IoT en la red para que los ciberdelincuentes piquen. Es
         una forma muy sencilla de encontrar vulnerabilidades y sus posibles
-        remedios", señala Manuel López, responsable de soluciones IoT de
-        Telefónica Empresas. Aparte de que capturan a los hackers en plena
+        remedios", señala <span class="bold"> López, responsable de soluciones IoT de
+        Telefónica Empresas.</span> Aparte de que capturan a los hackers en plena
         acción, los honey pots son una herramienta de aprendizaje porque con la
         información obtenida pueden preverse con mayor facilidad otros indicios
         de que alguien ajeno está preparando un ataque a todo lo que tenemos
