Actualizo alt de las imágenes y añado enlaces a la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <nav id="navegacion">
       <ul id="listanav">
-          <li id="elpais">EL PAIS</li>
-          <li id="think"> #THINKBIGEMPRESAS</li>
-          <li id="unproyecto"> UN PROYECTO DE <img id="telefonica" src="img/telefonica-logo.webp" alt="logo telefonica"></li>
+          <li id="elpais"> <a href="https://elpais.com"> EL PAIS</a></li>
+          <li id="think"> <a href="https://empresas.blogthinkbig.com"> #THINKBIGEMPRESAS</a> </li>
+          <li id="unproyecto"> <a href="https://www.telefonica.com/es/">PROYECTO DE <img id="telefonica" src="img/telefonica-logo.webp" alt="logo telefonica"></a> </li>
       </ul>
     </nav>
     <main class="informacion">
@@ -126,7 +126,7 @@
       </ul>
       <div class="imagenes">
         <img class="ilustraciones" src="img/hogarconectado.jpg"
-          alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
+          alt="Ilustracion con texto hogar conectado e ilustracion de una casa en flatplan"
         />
       </div>
       <p>
@@ -172,7 +172,7 @@
       <div class="imagenes">
         <img class="ilustraciones"
           src="img/cocheautonomos.jpg"
-          alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
+          alt="Imagen con texto que dice Coche automático con el mismo estilo flatplan representa el volante de un coche y una ruta en un mapa"
         />
       </div>
       <p>
@@ -220,7 +220,7 @@
       <div class="imagenes">
         <img class="ilustraciones"
           src="img/industria4.jpg"
-          alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
+          alt="Imagen con texto que dice Industria 4.0, aparece un dedo dandole a un boton de encendido en estilo flatplan"
         />
       </div>
       <p>
@@ -269,7 +269,7 @@
       <div class="imagenes">
         <img class="ilustraciones"
           src="img/ciudadinteligente.jpg"
-          alt="Imagen con texto que dice wereables, vemos un reloj de arena con el mismo estilo flatplan"
+          alt="Imagen con texto que dice ciudad inteligente, aparece una nube conectada a un semáforo con el mismo estilo flatplan"
         />
       </div>
       <p>
@@ -346,7 +346,14 @@
             <li class="iconos"> <img src="img/twitter.png" alt="logo twitter"></li>
             <li class="iconos"> <img src="img/share.png" alt="icono compartir"></li>
            </ul>
-      </div>
+           </div>
+      <hr>
+     <footer>
+      <p>
+        <span class="bold">ARCHIVADO EN:</span> <br> <span class="gris"> Internet de las cosas Malware PhisHing Ciudades inteligentes Edificios inteligentes Antivirus Virus informáticos Hacker Delitos informáticos Seguridad internet</span></p>
+     </footer>
+      
+  
     </main>
   </body>
 </html>
