Nueva carpeta con fotos y subida de las tres primeras imagenes

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="estilos/estilo1.css" />
+    <link rel="stylesheet" href="estilos/estilo1.css"/>
     <title>
       Trabajos TPED1 Isabel García
     </title>
   </head>
-    <h1> <a href="ElPais/index.html" EL PAÍS></a></h1>
+    <h1> Trabajos TPED1 Isabel García</h1>
+    <h1><a href="/Users/isagar03/Desktop/GITHUB2/TPED1-25-26/ElPais">EL PAÍS</a> </h1>
   <body>
 
   </body>
