reorganizacion imagenes por fallo

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -13,14 +13,17 @@
     </header>
     <section>
         <h2>Planetas</h2>
-        <a href="Galeria/imagenes/REDUCIDAS/ASTRONAUTA1.png" target="_blank">
-            <img alt="Astronauta" src="Galeria/imagenes/ORIGINALES/ORIGINAL_ASTRONAUTA1.jpg">
+        <a href="imagenes/astronauta1.png" target="_blank">
+            <img alt="Astronauta" src="imagenes/original_astronauta1.jpg">
         </a>
-        <a href="Galeria/imagenes/ORIGINALES/ORIGINAL_ASTRONAUTA2.jpg" target="_blank">
-            <img alt="Astronauta" src="Galeria/imagenes/REDUCIDAS/ASTRONAUTA2.png">
+        <a href="imagenes/ORIGINAL_ASTRONAUTA2.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/ASTRONAUTA2.png">
         </a>
-        <a href="Galeria/imagenes/REDUCIDAS/ASTRONAUTA3.png" target="_blank">
-            <img alt="Astronauta" src="Galeria/imagenes/ORIGINALES/ORIGINAL_ASTRONAUTA3.jpg">
+        <a href="imagenes/ORIGINAL_ASTRONAUTA3.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/ASTRONAUTA3.png">
+        </a>
+         <a href="imagenes/ORIGINAL_JUPITER.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/JUPITER.png">
         </a>
     </section>
 
