Subo nuevas imagenes, añado descripción a las mismas y termino la galeria

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -12,18 +12,66 @@
         <h1>GALERÍA ASTRONÓMICA</h1>
     </header>
     <section>
-        <h2>Planetas</h2>
-        <a href="imagenes/astronauta1.png" target="_blank">
-            <img alt="Astronauta" src="imagenes/original_astronauta1.jpg">
+        <h2>PLANETAS</h2>
+       
+         <a href="imagenes/ORIGINAL_JUPITER.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/JUPITER.png" title="Júpiter">
+        </a>
+        <a href="imagenes/ORIGINAL_LATIERRA.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/LATIERRA.png" title="La Tierra">
+        </a>
+        <a href="imagenes/ORIGINAL_SATURNO.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/SATURNO.png" title="Saturno">
+        </a>
+        <h2>ASTRONAUTAS</h2>
+         <a href="imagenes/astronauta1.png" target="_blank">
+            <img alt="Astronauta" src="imagenes/original_astronauta1.jpg" title="Astronauta flotando en el espacio">
         </a>
         <a href="imagenes/ORIGINAL_ASTRONAUTA2.jpg" target="_blank">
-            <img alt="Astronauta" src="imagenes/ASTRONAUTA2.png">
+            <img alt="Astronauta" src="imagenes/ASTRONAUTA2.png" title="Astronauta en el espacio">
         </a>
         <a href="imagenes/ORIGINAL_ASTRONAUTA3.jpg" target="_blank">
-            <img alt="Astronauta" src="imagenes/ASTRONAUTA3.png">
+            <img alt="Astronauta" src="imagenes/ASTRONAUTA3.png" title="Astronauta mirando al lado">
         </a>
-         <a href="imagenes/ORIGINAL_JUPITER.jpg" target="_blank">
-            <img alt="Astronauta" src="imagenes/JUPITER.png">
+        <h2>NEBULOSAS</h2>
+        <a href="imagenes/ORIGINAL_NEBULOSA1.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/NEBULOSA1.png" title="Nebulosa colorida">
+        </a>
+        <a href="imagenes/ORIGINAL_NEBULOSA2.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/NEBULOSA2.png" title="Nebulosa azul">
+        </a>
+        <a href="imagenes/ORIGINAL_NEBULOSA3.jpg" target="_blank">
+            <img alt="Astronauta" src="imagenes/NEBULOSA3.png" title="Nebulosa morada">
+        </a>
+        <h2>GIFS</h2>
+        <a href="imagenes/gif.gif" target="_blank">
+            <img alt="Gif de La Tierra" src="imagenes/gif.gif" title="La Tierra girando">
+        </a>
+        <a href="imagenes/gif2.gif" target="_blank">
+            <img alt="Gif del universo" src="imagenes/gif2.gif" title="Universo expandiéndose">
+        </a>
+        <a href="imagenes/gif3.gif" target="_blank">
+            <img alt="Time lapse gif del cielo" src="imagenes/gif3.gif" title="Cielo nocturno">
+        </a>
+       <h2> LA LUNA</h2>
+        <a href="imagenes/luna1.png"  target="_blank">
+            <img alt="Luna" src="imagenes/luna1ori.png" title="Luna">
+        </a>
+         <a href="imagenes/luna2red.png"  target="_blank">
+            <img alt="Luna" src="imagenes/luna2.png" title="Luna roja">
+        </a>
+         <a href="imagenes/luna3.png"  target="_blank">
+            <img alt="Luna" src="imagenes/luna3red.png" title="Luna con cráteres">
+        </a>
+        <h2>ILUSTRACIONES</h2>
+         <a href="imagenes/ilustracion1.svg"  target="_blank">
+            <img alt="Ilustracion cielo estrellado" src="imagenes/1.svg" title="Cielo estrellado">
+        </a>
+         <a href="imagenes/ilustracion2.svg"  target="_blank">
+            <img alt="Ilustracion abstracta del Espacio" src="imagenes/2.svg" title="Espacio abstracto">
+        </a>
+         <a href="imagenes/ilustracion3.svg"  target="_blank">
+            <img alt="Cohete" src="imagenes/3.svg" title=" Cohete espacial">
         </a>
     </section>
 
