--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -11,67 +11,158 @@
     <header>
         <h1>GALERÍA ASTRONÓMICA</h1>
     </header>
-    <section>
+    <section class="planetas">
         <h2>PLANETAS</h2>
        
          <a href="imagenes/ORIGINAL_JUPITER.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/JUPITER.png" title="Júpiter">
+            
+            <div class="contenedor">
+                <p class="muestratitulo">JÚPITER</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/ORIGINAL_LATIERRA.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/LATIERRA.png" title="La Tierra">
+            <div class="contenedor">
+                <p class="muestratitulo">LA TIERRA</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/ORIGINAL_SATURNO.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/SATURNO.png" title="Saturno">
+            <div class="contenedor">
+                <p class="muestratitulo">SATURNO</p>
+            </div>
+        </div>
         </a>
         <h2>ASTRONAUTAS</h2>
          <a href="imagenes/astronauta1.png" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/original_astronauta1.jpg" title="Astronauta flotando en el espacio">
+            <div class="contenedor">
+                <p class="muestratitulo">ASTRONAUTA FLOTA</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/ORIGINAL_ASTRONAUTA2.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/ASTRONAUTA2.png" title="Astronauta en el espacio">
+            <div class="contenedor">
+                <p class="muestratitulo">ASTRONAUTA ESPACIO</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/ORIGINAL_ASTRONAUTA3.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/ASTRONAUTA3.png" title="Astronauta mirando al lado">
+            <div class="contenedor">
+                <p class="muestratitulo">ASTRONAUTA</p>
+            </div>
+        </div>
         </a>
         <h2>NEBULOSAS</h2>
         <a href="imagenes/ORIGINAL_NEBULOSA1.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/NEBULOSA1.png" title="Nebulosa colorida">
+            <div class="contenedor">
+                <p class="muestratitulo">NEBULOSA COLORIDA</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/ORIGINAL_NEBULOSA2.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/NEBULOSA2.png" title="Nebulosa azul">
+            <div class="contenedor">
+                <p class="muestratitulo">NEBULOSA AZUL</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/ORIGINAL_NEBULOSA3.jpg" target="_blank">
+            <div class="ampliacion">
             <img alt="Astronauta" src="imagenes/NEBULOSA3.png" title="Nebulosa morada">
+            <div class="contenedor">
+                <p class="muestratitulo">NEBULOSA MORADA</p>
+            </div>
+        </div>
         </a>
         <h2>GIFS</h2>
         <a href="imagenes/gif.gif" target="_blank">
+            <div class="ampliacion">
             <img alt="Gif de La Tierra" src="imagenes/gif.gif" title="La Tierra girando">
+            <div class="contenedor">
+                <p class="muestratitulo">TIERRA GIRANDO</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/gif2.gif" target="_blank">
+            <div class="ampliacion">
             <img alt="Gif del universo" src="imagenes/gif2.gif" title="Universo expandiéndose">
+            <div class="contenedor">
+                <p class="muestratitulo">UNIVERSO EXPANDIÉNDOSE</p>
+            </div>
+        </div>
         </a>
         <a href="imagenes/gif3.gif" target="_blank">
+            <div class="ampliacion">
             <img alt="Time lapse gif del cielo" src="imagenes/gif3.gif" title="Cielo nocturno">
+            <div class="contenedor">
+                <p class="muestratitulo">TIEMPO CIELO NOCTURNO</p>
+            </div>
+        </div>
         </a>
        <h2> LA LUNA</h2>
         <a href="imagenes/luna1.png"  target="_blank">
+            <div class="ampliacion">
             <img alt="Luna" src="imagenes/luna1ori.png" title="Luna">
+            <div class="contenedor">
+                <p class="muestratitulo">LA LUNA</p>
+            </div>
+        </div>
         </a>
          <a href="imagenes/luna2red.png"  target="_blank">
+            <div class="ampliacion">
             <img alt="Luna" src="imagenes/luna2.png" title="Luna roja">
+            <div class="contenedor">
+                <p class="muestratitulo">LUNA ROJA</p>
+            </div>
+        </div>
         </a>
-         <a href="imagenes/luna3.png"  target="_blank">
+         <a href="imagenes/luna3.png" target="_blank">
+            <div class="ampliacion">
             <img alt="Luna" src="imagenes/luna3red.png" title="Luna con cráteres">
+            <div class="contenedor">
+                <p class="muestratitulo">LUNA CON CRÁTERES</p>
+            </div>
+        </div>
         </a>
         <h2>ILUSTRACIONES</h2>
          <a href="imagenes/ilustracion1.svg"  target="_blank">
+            <div class="ampliacion">
             <img alt="Ilustracion cielo estrellado" src="imagenes/1.svg" title="Cielo estrellado">
+            <div class="contenedor">
+                <p class="muestratitulo">CIELO ESTRELLADO</p>
+            </div>
+        </div>
         </a>
          <a href="imagenes/ilustracion2.svg"  target="_blank">
+            <div class="ampliacion">
             <img alt="Ilustracion abstracta del Espacio" src="imagenes/2.svg" title="Espacio abstracto">
+            <div class="contenedor">
+                <p class="muestratitulo">ESPACIO ABSTRACTO</p>
+            </div>
+        </div>
         </a>
          <a href="imagenes/ilustracion3.svg"  target="_blank">
+            <div class="ampliacion">
             <img alt="Cohete" src="imagenes/3.svg" title=" Cohete espacial">
+            <div class="contenedor">
+                <p class="muestratitulo">COHETE ESPACIAL</p>
+            </div>
+        </div>
         </a>
     </section>
 
