Correccion enlace a las actividades

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos/estilo1.css"/>
     <title>
@@ -9,7 +9,8 @@
     </title>
   </head>
     <h1> Trabajos TPED1 Isabel García</h1>
-    <h1><a href="/Users/isagar03/Desktop/GITHUB2/TPED1-25-26/ElPais">EL PAÍS</a> </h1>
+    <p><a href="ElPais/index.html">EL PAÍS</a> </p>
+    <p><a href="Galeria/index.html">GALERÍA</a> </p>
   <body>
 
   </body>
