Catalogo tipografico flex y adapatción de índice a flex

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="estilos/estilo1.css"/>
+    <link rel="stylesheet" href="CSS/estilo1.css"/>
     <title>
       Trabajos TPED1 Isabel García
     </title>
   </head>
     <h1> Trabajos TPED1 Isabel García</h1>
+    <div class="enlaces">
     <p><a href="ElPais/index.html">EL PAÍS</a> </p>
     <p><a href="Galeria/index.html">GALERÍA</a> </p>
+     <p><a href="CatalogoTipografico/index.html">CATÁLOGO TIPOGRÁFICO</a> </p>
+    </div>
   <body>
 
   </body>
