Maquetación y organizacion de toda la pagina web y subpaginas del portfolio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="enlaces">
     <p><a href="ElPais/index.html">EL PAÍS</a> </p>
     <p><a href="Galeria/index.html">GALERÍA</a> </p>
-     <p><a href="CatalogoTipografico/index.html">CATÁLOGO TIPOGRÁFICO</a> </p>
+    <p><a href="CatalogoTipografico/index.html">CATÁLOGO TIPOGRÁFICO</a> </p>
+    <p><a href="Ejercicio_responsive/index.html">PÁGINA RESPONSIVE</a> </p>
+    <p><a href="Boostrap/index.html">BOOSTRAP</a> </p>
+    <p><a href="PORTFOLIO/index.html">PORTFOLIO</a> </p>
     </div>
   <body>
 
