últimas actualizaciones: añado flechas y corrijo enlaces

--- a/PORTFOLIO/paginas/index5.html
+++ b/PORTFOLIO/paginas/index5.html
@@ -64,14 +64,17 @@
   <div class=" col-12 col-md-4">
         <img src="../img/rea4.png" class="img-fluid" alt="">
   </div>
-  <div class=" col-12 col-md-8">
+  <div class=" col-12 col-md-4">
         <img src="../img/rea5.png" class="img-fluid" alt="">
   </div>
-  <div class=" col-12 col-md-8">
+  <div class=" col-12 col-md-4">
         <img src="../img/rea6.png" class="img-fluid" alt="">
   </div>
   
-   
+   <div class="d-flex justify-content-center gap-4 mt-5">
+  <a href="index1.html" class="btn btn-outline-dark boton">
+    ←
+  </a>
 
 </div>
 </div>
