--- a/PORTFOLIO/paginas/index7.html
+++ b/PORTFOLIO/paginas/index7.html
@@ -63,6 +63,12 @@ A través del diseño y la fotografía busco encontrar un equilibrio entre lo si
 
   </div>
 </div>
+<div class="d-flex justify-content-center gap-4 mt-5">
+  <a href="../index.html" class="btn btn-outline-dark boton">
+    ←
+  </a>
+
+</div>
 <footer class="bg-dark text-center text-white">© 2026 Isabel García Sampere. Todos los derechos reservados.<br> Contacto: isabelgarcia.ilustraciones@gmail.com <br>Instagram: iisagaarcia_</footer>
   </body>
 </html>
