--- a/PORTFOLIO/paginas/index1.html
+++ b/PORTFOLIO/paginas/index1.html
@@ -30,18 +30,20 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="paginas/index1.html">Diseño</a>
+          <a class="nav-link" href="index1.html">Diseño</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="paginas/index2.html">Fotografía</a>
+          <a class="nav-link" href="index2.html">Fotografía</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sobre mí</a>
+          <a class="nav-link" href="index7.html">Sobre mí</a>
         </li>  
       </ul>
     </div>
   </div>
 </nav>
+
+
 
     <div class="container-fluid p-0 nofilter">
   <div class="row g-0">
@@ -66,6 +68,12 @@
   </div>
   
 </div>
+</div>
+<div class="d-flex justify-content-center gap-4 mt-5">
+  <a href="../index.html" class="btn btn-outline-dark boton">
+    ←
+  </a>
+  
 </div>
 <footer class="bg-dark text-center text-white">© 2026 Isabel García Sampere. Todos los derechos reservados.<br> Contacto: isabelgarcia.ilustraciones@gmail.com <br>Instagram: iisagaarcia_</footer>
   </body>
