--- a/PORTFOLIO/paginas/index2.html
+++ b/PORTFOLIO/paginas/index2.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="../paginas/index2.html">Fotografía</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sobre mí</a>
+          <a class="nav-link" href="../paginas/index7.html">Sobre mí</a>
         </li>  
       </ul>
     </div>
@@ -112,6 +112,11 @@
         <img src="../img/humo3.png" class="img-fluid" alt="">
   </div>
 
+</div>
+<div class="d-flex justify-content-center gap-4 mt-5">
+  <a href="../index.html" class="btn btn-outline-dark boton">
+    ←
+  </a>
 </div>
 </div>
 <footer class="bg-dark text-center text-white">© 2026 Isabel García Sampere. Todos los derechos reservados.<br> Contacto: isabelgarcia.ilustraciones@gmail.com <br>Instagram: iisagaarcia_</footer>
