--- a/PORTFOLIO/paginas/index3.html
+++ b/PORTFOLIO/paginas/index3.html
@@ -67,7 +67,12 @@
   <div class=" col-12 col-md-8">
         <img src="../img/lasanica5.png" class="img-fluid" alt="">
   </div>
+  <div class="d-flex justify-content-center gap-4 mt-5">
+  <a href="index1.html" class="btn btn-outline-dark boton">
+    ←
+  </a>
   
+</div>
    
 
 </div>
