--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="estilos/estilo1.css"/>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><img class="logo" src="img/bel.png" alt="Logo" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
