--- a/PORTFOLIO/paginas/index1.html
+++ b/PORTFOLIO/paginas/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,67 +14,86 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio Isabel García</title>
     <link rel="stylesheet" href="../estilos/estilo1.css"/>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/bel.png" alt="Logo" /></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index1.html">Diseño</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index2.html">Fotografía</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index7.html">Sobre mí</a>
-        </li>  
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"
+          ><img class="logo" src="../img/bel.png" alt="Logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapsibleNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index1.html">Diseño</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index2.html">Fotografía</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index7.html">Sobre mí</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <div class="container-fluid p-0 nofilter">
-  <div class="row g-0">
-    
-    <div class="col-12 col-md-4">
-     <a href="index3.html"><img src="../img/lasanica3.png" class="img-fluid" alt=""></a>
+      <div class="row g-0">
+        <div class="col-12 col-md-4">
+          <a href="index3.html"
+            ><img src="../img/lasanica3.png" class="img-fluid" alt=""
+          /></a>
+        </div>
+        <div class="col-12 col-md-4">
+          <a href="index5.html"
+            ><img src="../img/rea1.png" class="img-fluid" alt=""
+          /></a>
+        </div>
+        <div class="col-12 col-md-4">
+          <a href="index6.html"
+            ><img src="../img/fotolibro1.png" class="img-fluid" alt=""
+          /></a>
+        </div>
+        <div class="col-12 col-md-4">
+          <a href="index4.html"
+            ><img src="../img/viroa1.png" class="img-fluid" alt=""
+          /></a>
+        </div>
+        <div class="col-12 col-md-4">
+          <a href="index8.html"
+            ><img src="../img/fliparte1.png" class="img-fluid" alt=""
+          /></a>
+        </div>
+        <div class="col-12 col-md-4">
+          <a href="index5.html"
+            ><img src="../img/rea4.png" class="img-fluid" alt=""
+          /></a>
+        </div>
+      </div>
     </div>
-     <div class=" col-12 col-md-4">
-     <a href="index5.html"><img src="../img/rea1.png" class="img-fluid" alt=""></a>
+    <div class="d-flex justify-content-center gap-4 mt-5">
+      <a href="../index.html" class="btn btn-outline-dark boton"> ← </a>
     </div>
-      <div class=" col-12 col-md-4">
-        <a href="index6.html"><img src="../img/fotolibro1.png" class="img-fluid" alt=""></a>
-  </div>
-  <div class=" col-12 col-md-4">
-        <a href="index4.html"><img src="../img/viroa1.png" class="img-fluid" alt=""></a>
-  </div>
-  <div class=" col-12 col-md-4">
-        <a href="index8.html"><img src="../img/fliparte1.png" class="img-fluid" alt=""></a>
-  </div>
-  <div class=" col-12 col-md-4">
-        <a href="index5.html"><img src="../img/rea4.png" class="img-fluid" alt=""></a>
-  </div>
-  
-</div>
-</div>
-<div class="d-flex justify-content-center gap-4 mt-5">
-  <a href="../index.html" class="btn btn-outline-dark boton">
-    ←
-  </a>
-  
-</div>
-<footer class="bg-dark text-center text-white">© 2026 Isabel García Sampere. Todos los derechos reservados.<br> Contacto: isabelgarcia.ilustraciones@gmail.com <br>Instagram: iisagaarcia_</footer>
+    <footer class="bg-dark text-center text-white">
+      © 2026 Isabel García Sampere. Todos los derechos reservados.<br />
+      Contacto: isabelgarcia.ilustraciones@gmail.com <br />Instagram:
+      iisagaarcia_
+    </footer>
   </body>
 </html>
